add condition block in seerides

--- a/src/app/pages/see-rides/see-rides.component.html
+++ b/src/app/pages/see-rides/see-rides.component.html
@@ -30,11 +30,14 @@
                             <div class="point__line"></div>
                             <div class="point__arrival"></div>
                         </div>
-                        <div class="info__ride__city">
+                        <div class="info__ride__city" *ngIf="ride.home_to_office">
                             <p class="info__ride__city__departure">{{ride.date.substring(11, 16)}} - {{ride.city}}</p>
                             <p>9h - ipipoe</p>
                         </div>
-                        
+                        <div class="info__ride__city" *ngIf="!ride.home_to_office">
+                            <p class="info__ride__city__departure">9h - ipipoe</p>
+                            <p>{{ride.date.substring(11, 16)}} - {{ride.city}}</p>
+                        </div>
                     </div>
                     <div class="info__driver">
                         <p>{{ride.driverFirstname}} {{ride.driverLastname}}</p>
