--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -28,7 +28,7 @@
         .container__hero__radio {
             display: flex;
             justify-content: space-around;
-            margin-right: 0.5em;
+            margin-right: 0.8em;
     
             label {
                 font-size: 1.3em;
@@ -98,6 +98,8 @@
 
                 h3 {
                     margin-bottom: 2em;
+                    font-size: 1.3em;
+                    font-weight: normal;
                 }
 
                 p {
