--- a/src/app/pages/create-ride/create-ride.component.scss
+++ b/src/app/pages/create-ride/create-ride.component.scss
@@ -40,7 +40,7 @@
 
         label {
           font-size: 1.5em;
-          margin-right: 1em;
+          margin-left: 1em;
         }
 
         input[type="radio"] {
@@ -55,8 +55,7 @@
       }
 
       input[type="text"],
-      input[type="number"],
-      input[type="datetime-local"] {
+      input[type="number"] {
         border: none;
         border-radius: 2em;
         width: 40em;
@@ -78,7 +77,8 @@
         text-align: center;
         input[type="text"],
         input[type="number"],
-        input[type="datetime-local"] {
+        input[type="datetime-local"],
+        input[type="time"] {
           border: none;
           border-radius: 2em;
           width: 19em;
@@ -93,6 +93,12 @@
             outline: 2px solid $secondary-color;
           }
         }
+        ::-webkit-datetime-edit-fields-wrapper { color: rgb(113, 113, 113); }
+        ::-webkit-calendar-picker-indicator { margin-right: 1.2em; }
+      }
+
+      p {
+        color: rgb(234, 32, 32);
       }
 
       .demi_container p{
