--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -69,9 +69,11 @@
 
     &__rides {
         height: 100%;
+        width: 100%;
         overflow: hidden;
 
         &__box {
+            position: relative;
             top: 0;
             bottom:0;
             height: 100%;
@@ -80,6 +82,12 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+
+            .loader {
+                position: absolute;
+                top: 50%;
+                left: 50%;
+            }
 
             &__list {
                 color: $dark-color;
@@ -95,14 +103,33 @@
                 background-position: bottom;
                 padding: 2em 0 4em 0;
                 border-radius: 50px 50px 0 0;
+                transition: 0.5s;
+
+                &:hover {
+                    width: 620px;
+                    transition: 0.5s;
+
+                    p {
+                        font-size: 1.4em;
+                        transition: 0.5s;
+                    }
+
+                    h3 {
+                        font-size: 1.4em;
+                        transition: 0.5s;
+                    }
+                }
 
                 h3 {
                     margin-bottom: 2em;
                     font-size: 1.3em;
+                    font-weight: 500;
+                    transition: 0.5s;
                 }
 
                 p {
                     font-size: 1.3em;
+                    transition: 0.5s;
                 }
 
                 .info {
