--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap');
 
 $primary-color: #038491;
 $secondary-color: #EE6C4D;
@@ -53,5 +53,38 @@ a {
     &:hover {
         background-color: $primary-color;
         border: 2px solid $secondary-color;
+    }
+}
+
+.loader {
+    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    animation: slidein 5s linear infinite;
+
+    img {
+        width: 50px;
+    }
+}
+
+@keyframes spin {
+    0% { transform: rotate(90deg); }
+    100% { transform: rotate(360deg); }
+}
+
+@keyframes slidein {
+    0% {
+        opacity: 0;
+        transform: translate(0, 0) rotate(90deg);
+    }
+
+    50% {
+        opacity: 1;
+        transform: translate(-200px, 100px) rotate(130deg);
+    }
+
+    100% {
+        opacity: 1;
+        transform : translate(200px, 300px) rotate(60deg);
     }
 }
