change logo navbar

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav>
-    <a routerLink="/"><img src="../../../../assets/img/logo.svg" alt="logo"></a>
+    <a routerLink="/"><img src="../../../../assets/img/logo.png" alt="logo"></a>
     <div *ngIf="!user">
         <a routerLink="trajets">Les trajets</a>
         <a routerLink="connexion">Se connecter</a>
