--- a/src/app/pages/see-rides/see-rides.component.html
+++ b/src/app/pages/see-rides/see-rides.component.html
@@ -17,7 +17,7 @@
 
     <div class="container__rides">
         <div class="container__rides__box">
-            <p *ngIf="(!rides || rides.length === 0) && !loading">Aucune correspondance trouvée</p>
+            <p *ngIf="(!rides || rides.length === 0) && !loading" class="not-found">Aucune correspondance trouvée</p>
             <div class="loader" *ngIf="loading"><img src="../../../assets/img/plume.png" alt=""></div>
             <a [routerLink]="['/trajet',ride.id_ride]" class="container__rides__box__list" *ngFor="let ride of rides">
                 <h3>{{ride.date | date :'fullDate':'+01:00':'fr'}}</h3>
