--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -83,6 +83,17 @@
             flex-direction: column;
             align-items: center;
 
+            .not-found {
+                position: absolute;
+                top: 40%;
+                padding: 2em;
+                border-radius: 25px;
+                background-color: rgba(152, 193, 217, 0.904);
+                color: $secondary-color;
+                font-size: 1.4em;
+                font-weight: medium;
+            }
+
             .loader {
                 position: absolute;
                 top: 50%;
