--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -214,12 +214,12 @@
 }
 
 ::-webkit-scrollbar-track {
-    border: none;
     margin-top: 2em;
 }
 
 ::-webkit-scrollbar {
     width: 10px;
+    background: none;
 }
 
 ::-webkit-scrollbar-thumb {
