--- a/src/styles.scss
+++ b/src/styles.scss
@@ -26,6 +26,20 @@ a {
     text-decoration: none;
 }
 
+::-webkit-scrollbar-track {
+    border: none;
+}
+
+::-webkit-scrollbar {
+    width: 10px;
+    background-color:#038491;
+}
+
+::-webkit-scrollbar-thumb {
+    background: $secondary-color;
+    border-radius: 10px;
+}
+
 .btn {
     border: none;
     border-radius: 1.5em;
