--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -117,29 +117,30 @@
                 transition: 0.5s;
 
                 &:hover {
+                    z-index: 1;
                     width: 620px;
                     transition: 0.5s;
 
                     p {
-                        font-size: 1.4em;
+                        font-size: 1.8em;
                         transition: 0.5s;
                     }
 
                     h3 {
-                        font-size: 1.4em;
+                        font-size: 1.8em;
                         transition: 0.5s;
                     }
                 }
 
                 h3 {
                     margin-bottom: 2em;
-                    font-size: 1.3em;
+                    font-size: 1.7em;
                     font-weight: 500;
                     transition: 0.5s;
                 }
 
                 p {
-                    font-size: 1.3em;
+                    font-size: 1.6em;
                     transition: 0.5s;
                 }
 
@@ -161,7 +162,7 @@
                             justify-content: space-between;
 
                             &__departure {
-                                margin-top: 0.2em;
+                                margin-top: 0.1em;
                             }
                         }
 
