--- a/src/app/shared/components/card-light/card-light.component.html
+++ b/src/app/shared/components/card-light/card-light.component.html
@@ -1,6 +1,6 @@
 <a [routerLink]="['/trajet', ride.id_ride]">
   <article>
-    <p>{{ride.date | date :'mediumDate':'+01:00':'fr'}}</p>
+    <p class="date">{{ride.date | date :'mediumDate':'+01:00':'fr'}}</p>
     <div class="info">
       <div class="point">
         <div class="point__departure">
@@ -10,11 +10,11 @@
         <div class="point__arrival"></div>
       </div>
       <div *ngIf="ride.home_to_office" class="info__rides">
-        <p>{{ride.date.substring(11, 16)}} - {{ride.city}}</p>
+        <p class="info__rides__departure">{{ride.date.substring(11, 16)}} - {{ride.city}}</p>
         <p class="info__rides__arrival">{{ride.arrival_time?.substring(0, 5)}} - Entreprise</p>
       </div>
       <div *ngIf="!ride.home_to_office" class="info__rides">
-        <p>{{ride.date.substring(11, 16)}} - Ipipoe</p>
+        <p class="info__rides__departure">{{ride.date.substring(11, 16)}} - Ipipoe</p>
         <p class="info__rides__arrival">{{ride.arrival_time?.substring(0, 5)}} - {{ride.city}}</p>
       </div>
     </div>
