--- a/src/app/pages/auth/sign-up/sign-up.component.html
+++ b/src/app/pages/auth/sign-up/sign-up.component.html
@@ -1,6 +1,6 @@
 <div class="container">
   <form [formGroup]="form" (submit)="submit()" class="container__form">
-    <img src="../../../../assets/img/connexion.png" alt="logo">
+    <img src="../../../../assets/img/inscription.png" alt="logo">
     <div>
       <input type="text" placeholder="Nom" formControlName="lastname">
       <p *ngIf="form.get('lastname')?.errors?.['required']&&form.get('lastname')?.touched">Veuillez renseigner un nom</p>
