--- a/src/app/shared/components/user-booked-ride/user-booked-ride.component.scss
+++ b/src/app/shared/components/user-booked-ride/user-booked-ride.component.scss
@@ -9,49 +9,53 @@ h2 {
     margin-top: 2em;
     max-height: 90%;
     overflow-y: scroll;
-
-    & .container {
-    background-color: $primary-color;
     color: white;
 
-    border-radius: 2em;
-    width: 90%;
-    margin: 2em;
-    padding: 1em 4em 2em 4em;
+    & .container {
+        background-color: $primary-color;
+        color: white;
 
-        & .up {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
+        border-radius: 2em;
+        width: 90%;
+        margin: 2em;
+        padding: 1em 4em 2em 4em;
 
-            & .pilot {
+        & a {
+            color: white;
+        
+            & .up {
                 display: flex;
-                justify-content: flex-end;
+                justify-content: space-between;
                 align-items: center;
 
-                & img {
-                    width: 4em;
-                    height: 4em;
-                    border-radius: 20em;
-                    margin-right: 1em;
+                & .pilot {
+                    display: flex;
+                    justify-content: flex-end;
+                    align-items: center;
+
+                    & img {
+                        width: 4em;
+                        height: 4em;
+                        border-radius: 20em;
+                        margin-right: 1em;
+                    }
+                }
+            }
+
+            & .down {
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+
+                & .button {
+                    color: $secondary-color;
+                }
+
+                & .button:hover {
+                    font-weight: bold;
+                    cursor: pointer;
                 }
             }
         }
-
-        & .down {
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        & a {
-            color: $secondary-color;
-        }
-
-        & a:hover {
-            font-weight: bold;
-            cursor: pointer;
-        }
-
     }
 }
