--- a/src/app/shared/components/user-infos/user-infos.component.html
+++ b/src/app/shared/components/user-infos/user-infos.component.html
@@ -21,22 +21,25 @@
 
     <div class="next-ride">
         <div class="container">
-            <div class="up">
-            <h3>{{ride.date.substring(0, 10)}}</h3>
-            <div class="pilot">
-                <img src="../../../../assets/img/polite-frog.png">
-                <h3>Ayrton Senna</h3>
-            </div>
-        </div>
-        <div class="down">
-            <div class="itinary" *ngIf="ride.home_to_office">
-                <h3>{{ride.date.substring(11, 16)}} - IPI POE → ETA - {{ride.city}}</h3>
-            </div>
-            <div class="itinary" *ngIf="!ride.home_to_office">
-                <h3>{{ride.date.substring(11, 16)}} - {{ride.city}} → ETA - IPI POE</h3>
-            </div>
-            <a> Annuler </a>
-        </div>
+            <a [routerLink]="['/trajet', ride.id_ride]">
+
+                <div class="up">
+                <h3>{{ride.date.substring(0, 10)}}</h3>
+                <div class="pilot">
+                    <img src="../../../../assets/img/polite-frog.png">
+                    <h3>Ayrton Senna</h3>
+                </div>
+                </div>
+                <div class="down">
+                    <div class="itinary" *ngIf="ride.home_to_office">
+                        <h3>{{ride.date.substring(11, 16)}} - IPI POE → ETA - {{ride.city}}</h3>
+                    </div>
+                    <div class="itinary" *ngIf="!ride.home_to_office">
+                        <h3>{{ride.date.substring(11, 16)}} - {{ride.city}} → ETA - IPI POE</h3>
+                    </div>
+                    <a class="cancel"> Annuler </a>
+                </div>
+            </a>
         </div>
     </div>
 
