--- a/src/app/pages/see-a-ride/see-a-ride.component.html
+++ b/src/app/pages/see-a-ride/see-a-ride.component.html
@@ -8,9 +8,8 @@
     <p>Heure de départ <span class="my-span">{{ride.date | date:'HH:mm' }}</span></p>
     <p>Place<span *ngIf="ride.places > 1">s </span> restante<span *ngIf="ride.places > 1">s</span> <span class="my-span">{{ride.places}}</span></p>
 
-    <div class="custom-btn">
-      <button class="btn btn-primary" routerLink="/trajets">Retour</button>
-      <button class="btn btn-primary" *ngIf="user && user['id'] != ride.id_user" (click)="booking(ride.id_ride)">Réserver</button>
+    <div class="custom-btn">      <button class="btn btn-primary" routerLink="/trajets">Retour</button>
+      <button class="btn btn-primary" *ngIf="user && user['id'] != ride.id_user && ride.places > 0" (click)="booking(ride.id_ride)">Réserver</button>
     </div>
   </div>
 </div>
