--- a/src/app/shared/components/user-bookings/user-bookings.component.html
+++ b/src/app/shared/components/user-bookings/user-bookings.component.html
@@ -1,4 +1,4 @@
-<h2> Mes trajets ponctuels </h2>
+<h2> Demandes en attentes </h2>
 
 <div class="rides-list">
   <div class="container" *ngFor="let ride of rides">
