--- a/src/app/pages/user-account/user-account.component.html
+++ b/src/app/pages/user-account/user-account.component.html
@@ -7,10 +7,16 @@
 
         <a class="general" (click)="seeInfos()">Mes informations</a>
         <a class="general">Mes trajets</a>
-        
+
         <div class="routes">
             <a (click)="seeBookedRides()"> <span class="tab"> </span> Mes trajets réservés</a>
             <a (click)="seeProposedRides()"> <span class="tab"> </span> Mes trajets proposés</a>
+        </div>
+
+      <a class="general">Réservations</a>
+        <div class="routes">
+          <a (click)="seeBookings()"> <span class="tab"> </span> Mes trajets réservés</a>
+
         </div>
     </div>
 
@@ -25,4 +31,9 @@
     <div class="right-panel" *ngIf="proposedRides">
         <app-user-proposed-ride [user]="user"></app-user-proposed-ride>
     </div>
+
+    <div class="right-panel" *ngIf="bookings">
+      <app-user-bookings [user]="user"></app-user-bookings>
+    </div>
+
  </div>
