--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -82,6 +82,7 @@
             display: flex;
             flex-direction: column;
             align-items: center;
+            scroll-behavior: smooth;
 
             .not-found {
                 position: absolute;
