--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -67,10 +67,18 @@
         ::-webkit-calendar-picker-indicator { margin-right: 1.2em; }
     }
 
+    &__core {
+        display: flex;
+        justify-content: center;
+        position: relative;
+        overflow: hidden;
+        width: 100%;
+    }
+
     &__rides {
         height: 100%;
-        width: 100%;
         overflow: hidden;
+        margin-left: 5em;
 
         &__box {
             position: relative;
@@ -83,6 +91,7 @@
             flex-direction: column;
             align-items: center;
             scroll-behavior: smooth;
+            padding-right: 1em;
 
             .not-found {
                 position: absolute;
@@ -115,21 +124,31 @@
                 background-position: bottom;
                 padding: 2em 0 4em 0;
                 border-radius: 50px 50px 0 0;
-                transition: 0.5s;
+                
+                .date {
+                    display: flex;
+                    justify-content: space-around;
+                    width: 100%;
+                }
 
                 &:hover {
                     z-index: 1;
-                    width: 620px;
-                    transition: 0.5s;
+                    padding: 2.5em 0 2.5em 0;
+                    background-image: none;
+                    background-color: rgba(225, 241, 246);
+                    border-radius: 50px;
+                    box-shadow: 10px 11px 15px -5px rgba(0,0,0,0.75);
+                    -webkit-box-shadow: 10px 11px 15px -5px rgba(0,0,0,0.75);
+                    -moz-box-shadow: 10px 11px 15px -5px rgba(0,0,0,0.75);
 
                     p {
                         font-size: 1.8em;
-                        transition: 0.5s;
+                        transition: 0.2s;
                     }
 
                     h3 {
                         font-size: 1.8em;
-                        transition: 0.5s;
+                        transition: 0.2s;
                     }
                 }
 
@@ -215,6 +234,24 @@
     margin-top: 2em;
 }
 
+.container__rides__box__list:last-child {
+    background-image: none;
+    background-color: rgba(225, 241, 246, 0.95);
+    border-radius: 50px;
+    padding-bottom: 2em;
+}
+
+.full:last-child {
+    background-color: rgba(192, 206, 210, 0.98);
+
+    &:hover {
+        background-image: none;
+        background-color: rgba(192, 206, 210, 0.98);
+        border-radius: 50px;
+        padding-bottom: 2em;
+    }
+}
+
 ::-webkit-scrollbar-track {
     margin-top: 2em;
 }
@@ -231,5 +268,44 @@
 
 .map {
     width: 500px;
-    min-height: 300px;
+    height: 400px;
+    margin-top: 2em;
+    margin-right: 5em;
+    border-radius: 50px;
+}
+
+.full {
+    background-image: url(../../../assets/img/card-full.svg)!important;
+
+    h3 {
+        color: rgb(135, 135, 135);
+    }
+
+    p {
+        color: rgb(135, 135, 135);
+    }
+
+    &:hover {
+        z-index: 0;
+        transition: none;
+        background-color: transparent;
+        background-image: url(../../../assets/img/card-full.svg)!important;
+        border-radius: 50px 50px 0 0;
+        padding: 2em 0 4em 0;
+        box-shadow: none;
+        -webkit-box-shadow: none;
+        -moz-box-shadow: none;
+
+        p {
+            font-size: 1.8em;
+            transition: 0.5s;
+            font-size: 1.6em;
+        }
+
+        h3 {
+            font-size: 1.8em;
+            transition: 0.5s;
+            font-size: 1.7em;
+        }
+    }
 }
