--- a/src/app/pages/see-rides/see-rides.component.html
+++ b/src/app/pages/see-rides/see-rides.component.html
@@ -22,11 +22,16 @@
             <div class="container__rides__box">
                 <p *ngIf="(!rides || rides.length === 0) && !loading" class="not-found">Aucune correspondance trouvée</p>
                 <div class="loader" *ngIf="loading"><img src="../../../assets/img/plume.png" alt=""></div>
-                <a [routerLink]="['/trajet',ride.id_ride]" id="ride-{{ride.id_ride}}" class="container__rides__box__list" [ngClass]="{'full': ride.places == 0}" *ngFor="let ride of rides">
-                    <div class="date">
-                        <h3>{{ride.date | date :'fullDate':'+01:00':'fr'}}</h3>
-                        <h3 *ngIf="ride.places == 0">Complet</h3>
-                    </div>
+                <a 
+                    [routerLink]="ride.places != 0 ? ['/trajet',ride.id_ride] : []"
+                    id="ride-{{ride.id_ride}}" 
+                    class="container__rides__box__list" 
+                    [ngClass]="{'full': ride.places == 0}"
+                    *ngFor="let ride of rides"
+                >
+                    <h3>{{ride.date | date :'fullDate':'+01:00':'fr'}}</h3>
+                    <h3 *ngIf="ride.places == 0" class="info-full">Complet</h3>
+    
                     <div class="info">
                         <div class="info__ride">
                             <div class="point">
