--- a/src/app/pages/see-rides/see-rides.component.scss
+++ b/src/app/pages/see-rides/see-rides.component.scss
@@ -94,8 +94,7 @@
             padding-right: 1em;
 
             .not-found {
-                position: absolute;
-                top: 40%;
+                margin-top: 5em;
                 padding: 2em;
                 border-radius: 25px;
                 background-color: rgba(152, 193, 217, 0.904);
@@ -111,6 +110,7 @@
             }
 
             &__list {
+                position: relative;
                 color: $dark-color;
                 margin-top: -2.5em;
                 width :600px;
@@ -125,15 +125,16 @@
                 padding: 2em 0 4em 0;
                 border-radius: 50px 50px 0 0;
                 
-                .date {
-                    display: flex;
-                    justify-content: space-around;
-                    width: 100%;
+                .info-full {
+                    position: absolute;
+                    top: 1.2em;
+                    right: 2em;
+                    color: $secondary-color;
                 }
 
                 &:hover {
                     z-index: 1;
-                    padding: 2.5em 0 2.5em 0;
+                    padding: 2em 0 2.1em 0;
                     background-image: none;
                     background-color: rgba(225, 241, 246);
                     border-radius: 50px;
@@ -249,6 +250,7 @@
         background-color: rgba(192, 206, 210, 0.98);
         border-radius: 50px;
         padding-bottom: 2em;
+        cursor: default;
     }
 }
 
@@ -271,7 +273,7 @@
     height: 400px;
     margin-top: 2em;
     margin-right: 5em;
-    border-radius: 50px;
+    border-radius: 3em;
 }
 
 .full {
@@ -286,6 +288,7 @@
     }
 
     &:hover {
+        cursor: default;
         z-index: 0;
         transition: none;
         background-color: transparent;
