minor changes in questions

--- a/src/app/pages/q-and-a/q-and-a.component.html
+++ b/src/app/pages/q-and-a/q-and-a.component.html
@@ -45,7 +45,7 @@
 
     <div>
         <p class="question">
-            Et je peux également proposer mes propres trajets ? 
+            Je peux également proposer mes propres trajets ? 
         </p>
         <p class="answer">
             Bien sûr ! Pour cela, rien de plus simple. Il vous faudra simplement avoir un compte et être connecter. L'onglet <b>Proposer un trajet</b>
@@ -71,6 +71,17 @@
         <p class="answer">
             Vous pouvez, depuis les fiches de trajet, contacter les conducteurs associés. N'hésitez pas à vous arranger par message sur l'horaire 
             ou le lieu de rendez-vous !    
+        </p>
+    </div>
+
+    <div>
+        <p class="question">
+            Où puis-je voir mes informations ?
+        </p>
+        <p class="answer">
+            Toutes vos informations sont accessibles dans <b>Mon compte</b>. Vous pouvez également voir les trajets auxquels vous
+            êtes inscrit et ceux que vous avez proposé. 
+            En outre, vous avez la possiblité de changer votre image de profil et votre mot de passe.   
         </p>
     </div>
 
