change css in navbar + add image profile current user

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-  <app-navbar (logout)="logout()" [user]="user$ | async"></app-navbar>
+  <app-navbar (logout)="logout()" [user]="user$ | async" [retrievedImage]="retrievedImage"></app-navbar>
   <router-outlet></router-outlet>
 </div>
 
