--- a/src/app/shared/components/navbar/navbar.component.scss
+++ b/src/app/shared/components/navbar/navbar.component.scss
@@ -6,6 +6,7 @@ nav {
   justify-content: space-between;
   flex-wrap: wrap;
   height: 60px;
+  position: relative;
 
   img {
     width: 17em;
@@ -15,7 +16,20 @@ nav {
   div {
     display: flex;
     align-items: center;
-    min-height: 100%;
+    height: 100%;
+
+    .rounded {
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      overflow: hidden;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      img {
+        width: 100%;
+      }
+    }
 
     a {
       position: relative;
@@ -28,6 +42,7 @@ nav {
       transition: 0.2s;
       border-bottom: 4px solid transparent;
       padding: 0 1em;
+      cursor: pointer;
 
       &:after {
         content: '';
@@ -53,4 +68,57 @@ nav {
 
 .logout {
   cursor: pointer;
+}
+
+.menu {
+  display: none;
+  position: absolute;
+  top: 60px;
+  right: 0;
+  flex-direction: column;
+  align-items: center;
+  background-color: $secondary-color;
+  padding: 1em;
+
+  a {
+    position: relative;
+    display: flex;
+    align-items: center;
+    margin: 0 1.5em;
+    color: white;
+    font-size: 1.2em;
+    height: 50px;
+    transition: 0.2s;
+    border-bottom: 4px solid transparent;
+    padding: 0 1em;
+
+    &:after {
+      content: '';
+      position: absolute;
+      width: 100%;
+      transform: scaleX(0);
+      height: 4px;
+      bottom: 0;
+      left: 0;
+      background-color: #ffffff;
+      transform-origin: center;
+      transition: transform 0.25s ease-out;
+    }
+
+    &:hover:after {
+      transform: scaleX(1);
+      transform-origin: bottom;
+    }
+
+  }
+}
+
+.menuOpen {
+  display: flex;
+}
+
+.arrow {
+  width: 50px!important;
+  margin: 0!important;
+  margin-left: 10px!important;
 }
