--- a/src/app/pages/chat/chat.component.scss
+++ b/src/app/pages/chat/chat.component.scss
@@ -33,5 +33,48 @@
 
         border-radius: 2em;
         padding: 2em;
+
+        .messages {
+
+            overflow-y: scroll;
+
+            .userIsSender {
+                border-radius: 2em;
+                background-color: $primary-color;
+                width: fit-content;
+                padding: 1em;
+                margin: 2em;
+                margin-left: auto;
+                display: flex;
+                justify-content: end;
+                background-color: $third-color;
+            }
+
+            .userIsRecipient {
+                border-radius: 2em;
+                background-color: $primary-color;
+                width: fit-content;
+                padding: 1em;
+                margin: 2em;
+                background-color: $primary-color;
+            }
+        }
+
+        .answer {
+
+            .container__form {
+                display: flex;
+                align-items: center;
+
+                input {
+                    width: 90vh;
+                    height: auto;
+                    border-radius: 2em;
+                    padding: 1em;
+                    border: 1px solid white;
+                    font-size: 1em;
+                }
+            }
+        }
     }
 }
