--- a/src/app/shared/components/user-infos/user-infos.component.scss
+++ b/src/app/shared/components/user-infos/user-infos.component.scss
@@ -129,4 +129,15 @@
     cursor: pointer;
 }
 
-
+.rounded {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    img {
+        width: 100%;
+    }
+}
