--- a/src/app/pages/user-account/user-account.component.html
+++ b/src/app/pages/user-account/user-account.component.html
@@ -1,13 +1,14 @@
 <div class="container">
     <div class="left-panel">
         <div class="profile">
-            <img class="picture" src="../../../assets/img/cutegoldendog-1652637928757-890.jpg">
+            <div *ngIf="retrievedImage" class="rounded"><img [src]="retrievedImage"></div>
+            <img *ngIf="!retrievedImage"class="picture" src="../../../assets/img/cutegoldendog-1652637928757-890.jpg">
             <p>{{user.firstname}} {{user.lastname}}</p>
         </div>
 
         <a class="general" (click)="seeInfos()">Mes informations</a>
         <a class="general">Mes trajets</a>
-        
+
         <div class="routes">
             <a (click)="seeBookedRides()"> <span class="tab"> </span> Mes trajets réservés</a>
             <a (click)="seeProposedRides()"> <span class="tab"> </span> Mes trajets proposés</a>
