--- a/src/app/pages/user-account/user-account.component.scss
+++ b/src/app/pages/user-account/user-account.component.scss
@@ -17,9 +17,7 @@
         background-color: rgb(224, 251, 252, 0.9);
         width: 30%;
         margin: 2em;
-
         border-radius: 2em;
-
         display: flex;
         flex-direction: column;
         padding-top: 2em;
@@ -73,5 +71,19 @@
 
         border-radius: 2em;
         padding: 2em;
+    }
+}
+
+.rounded {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 2em 1em 2em;
+    img {
+        width: 100%;
     }
 }
